...
                                    <color key="textColor" systemColor="labelColor" cocoaTouchSystemColor="darkTextColor"/>
                                </textAttributes>
                                <textAttributes key="largeTitleTextAttributes">
                                    <color key="textColor" systemColor="labelColor" cocoaTouchSystemColor="darkTextColor"/>
                                </textAttributes>
                                <items>
                                    <navigationItem title="Nucleus" id="SHu-pQ-ZLU">
                                        <barButtonItem key="rightBarButtonItem" systemItem="search" id="WhZ-3T-s17">
                                            <connections>
                                                <action selector="searchWebButtonDown:" destination="9pv-A4-QxB" id="IUV-NH-RCp"/>
                                            </connections>
                                        </barButtonItem>
                                    </navigationItem>
...
                                <rect key="frame" x="0.0" y="44" width="414" height="44"/>
                                <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                                <textAttributes key="titleTextAttributes">
                                    <color key="textColor" systemColor="labelColor" cocoaTouchSystemColor="darkTextColor"/>
                                </textAttributes>
                                <items>
                                    <navigationItem title="Signal" id="ecP-53-Ge2"/>
                                </items>
                            </navigationBar>
                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" rowHeight="40" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="GX2-SG-U6G">
                                <rect key="frame" x="0.0" y="88" width="414" height="725"/>
                                <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                                <inset key="separatorInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
...
                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <navigationBar contentMode="scaleToFill" translucent="NO" translatesAutoresizingMaskIntoConstraints="NO" id="qbH-WS-4hQ">
                                <rect key="frame" x="0.0" y="44" width="414" height="44"/>
                                <items>
                                    <navigationItem title="RF Pulse" id="U7t-Ie-5xy"/>
                                </items>
                            </navigationBar>
                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="40" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="AIm-ze-eVc">
                                <rect key="frame" x="0.0" y="88" width="414" height="717"/>
                                <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                                <inset key="separatorInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
...
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <navigationBar contentMode="scaleToFill" translucent="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ctB-jI-hXW">
                                <rect key="frame" x="0.0" y="44" width="414" height="44"/>
                                <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                                <items>
                                    <navigationItem title="Solution" id="wsf-e3-sUW">
                                        <barButtonItem key="rightBarButtonItem" systemItem="search" id="5yy-48-EH8">
                                            <connections>
                                                <action selector="searchWebButtonDown:" destination="OFa-kn-WXf" id="Yk8-CP-Wa6"/>
                                            </connections>
                                        </barButtonItem>
                                    </navigationItem>
...
                                    <color key="textColor" systemColor="labelColor" cocoaTouchSystemColor="darkTextColor"/>
                                </textAttributes>
                                <textAttributes key="largeTitleTextAttributes">
                                    <color key="textColor" systemColor="labelColor" cocoaTouchSystemColor="darkTextColor"/>
                                </textAttributes>
                                <items>
                                    <navigationItem title="Information" id="kVS-Ad-qg9"/>
                                </items>
                            </navigationBar>
                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" editable="NO" translatesAutoresizingMaskIntoConstraints="NO" id="3E5-mk-0Jz">
                                <rect key="frame" x="8" y="88" width="398" height="725"/>
                                <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                                <string key="text">Lorem ipsum dolor sit er elit lamet, consectetaur cillium adipisicing pecu, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla paria
...
                            <constraint firstItem="OyO-eB-SmF" firstAttribute="top" secondItem="3E5-mk-0Jz" secondAttribute="bottom" id="XcW-4Q-HRY"/>
                            <constraint firstItem="3E5-mk-0Jz" firstAttribute="top" secondItem="C9i-dr-BFQ" secondAttribute="bottom" id="gHa-lZ-N5m"/>
                            <constraint firstAttribute="trailing" secondItem="C9i-dr-BFQ" secondAttribute="trailing" id="jtX-ZE-6cJ"/>
                            <constraint firstItem="3E5-mk-0Jz" firstAttribute="leading" secondItem="4GS-pe-sUy" secondAttribute="leading" constant="8" id="vKI-cV-Qu8"/>
                        </constraints>
                    </view>
                    <tabBarItem key="tabBarItem" title="Info" image="Icon_Info_unselected" selectedImage="Icon_Info" id="RoZ-S4-9sW"/>
                    <connections>
                        <outlet property="infoTextView" destination="3E5-mk-0Jz" id="4nV-gZ-OeC"/>
                    </connections>
                </viewController>
                <placeholder placeholderIdentifier="IBFirstResponder" id="NMN-q1-O88" userLabel="First Responder" sceneMemberID="firstResponder"/>
            </objects>
...
