...
        case externalMagneticField
        case protonLarmorFrequency
        case electronLarmorFrequency
    }
    
    // Constants
    let menuItems: [Menu: String] = [.larmorFrequency: "Larmor Frequency (MHz)",
                                     .externalMagneticField: "External Magnetic Field (Tesla)",
                                     .protonLarmorFrequency: "Proton's Larmor Frequency (MHz)",
                                     .electronLarmorFrequency:"Electron's Larmor Frequency (GHz)"]
    
    let numberofColumn = 1
    
    // Variables
...
